--- a/ingestion/package.json
+++ b/ingestion/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "@prisma/client": "5.10.2",
     "csv-parse": "^6.1.0",
-    "prisma": "5.10.2",
-    "zod": "^4.3.6"
+    "prisma": "5.10.2"
   },
   "devDependencies": {
     "@types/node": "^25.0.10",
